# candid-extractor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml  publish.yml
src/: extract.rs  main.rs
